--- a/vcs_git/version_control.tex
+++ b/vcs_git/version_control.tex
@@ -233,7 +233,7 @@
 
 \begin{figure}[htp]
  \centering
- \includegraphics[scale=0.2]{git_model1.png}
+ \includegraphics[scale=0.2]{git_model_1.png}
 \end{figure}
 
 \end{frame}
@@ -247,7 +247,7 @@
 
 \begin{figure}[htp]
  \centering
- \includegraphics[scale=0.2]{git_model2a.png}
+ \includegraphics[scale=0.2]{git_model_2a.png}
 \end{figure}
 
 \end{frame}
@@ -260,7 +260,7 @@
 
 \begin{figure}[htp]
  \centering
- \includegraphics[scale=0.2]{git_model2b.png}
+ \includegraphics[scale=0.2]{git_model_2b.png}
 \end{figure}
 
 \end{frame}
@@ -273,7 +273,35 @@
 
 \begin{figure}[htp]
  \centering
- \includegraphics[scale=0.2]{git_model2.png}
+ \includegraphics[scale=0.2]{git_model_2c.png}
+\end{figure}
+
+\end{frame}
+
+
+% --- Slide
+
+\begin{frame}[fragile]
+\frametitle{The Git Model}
+
+\begin{figure}[htp]
+ \centering
+ \includegraphics[scale=0.2]{git_model_2d.png}
+\end{figure}
+
+\end{frame}
+
+
+
+
+% --- Slide
+
+\begin{frame}[fragile]
+\frametitle{The Git Model}
+
+\begin{figure}[htp]
+ \centering
+ \includegraphics[scale=0.2]{git_model_3a.png}
 \end{figure}
 
 \end{frame}
@@ -287,7 +315,7 @@
 
 \begin{figure}[htp]
  \centering
- \includegraphics[scale=0.2]{git_model3a.png}
+ \includegraphics[scale=0.2]{git_model_3b.png}
 \end{figure}
 
 \end{frame}
@@ -301,21 +329,7 @@
 
 \begin{figure}[htp]
  \centering
- \includegraphics[scale=0.2]{git_model3b.png}
-\end{figure}
-
-\end{frame}
-
-
-
-% --- Slide
-
-\begin{frame}[fragile]
-\frametitle{The Git Model}
-
-\begin{figure}[htp]
- \centering
- \includegraphics[scale=0.2]{git_model3.png}
+ \includegraphics[scale=0.2]{git_model_3c.png}
 \end{figure}
 
 \end{frame}
@@ -329,7 +343,7 @@
 
 \begin{figure}[htp]
  \centering
- \includegraphics[scale=0.45]{gitInternals1.png}
+ \includegraphics[scale=0.45]{git_objects.png}
 \end{figure}
 
 %Object types:
@@ -355,7 +369,7 @@
 
 \begin{figure}[htp]
  \centering
- \includegraphics[scale=0.35]{gitB.png}
+ \includegraphics[scale=0.35]{git_setup.png}
 \end{figure}
 
 %The general drawing contains 4 areas distributed as follows:
@@ -470,7 +484,7 @@ Merge testing into master
 
 \begin{figure}[htp]
  \centering
- \includegraphics[scale=0.35]{gitC.png}
+ \includegraphics[scale=0.35]{git_remotes_1.png}
 \end{figure}
 
 \end{frame}
@@ -482,7 +496,7 @@ Merge testing into master
 
 \begin{figure}[htp]
  \centering
- \includegraphics[scale=0.35]{gitD.png}
+ \includegraphics[scale=0.35]{git_remotes_2.png}
 \end{figure}
 
 \end{frame}
@@ -494,7 +508,7 @@ Merge testing into master
 \frametitle{Git workflow}
 \begin{figure}[htp]
  \centering
- \includegraphics[scale=0.20]{gitWorkflow.png}
+ \includegraphics[scale=0.20]{git_workflow.png}
 \end{figure}
 
 
